--- a/TurnBasedRPG/Doodles/Doodle.xib
+++ b/TurnBasedRPG/Doodles/Doodle.xib
@@ -23,8 +23,8 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
-                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CnA-OC-qt6" customClass="Eye" customModule="TurnBasedRPG" customModuleProvider="target">
-                            <rect key="frame" x="12" y="115" width="125" height="65"/>
+                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CnA-OC-qt6" customClass="LineTree" customModule="TurnBasedRPG" customModuleProvider="target">
+                            <rect key="frame" x="12" y="103" width="125" height="77"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
